--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.8.5",
     "apexcharts": "^3.32.0",
     "framer-motion": "^5.5.2",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-hook-form": "^7.22.2",
+    "react-icons": "^4.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^16.11.13",
