--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.9",
     "@types/node": "^16.11.13",
     "@types/react": "^17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.43",
     "typescript": "^4.5.4"
   }
 }
