--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.5",
     "apexcharts": "^3.32.0",
+    "axios": "^0.24.0",
     "framer-motion": "^5.5.2",
     "next": "12.0.7",
     "react": "17.0.2",
